Horizontal scroll at 321-341 fixed

--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -4,6 +4,7 @@
   min-height: 740px;
   background-size: contain;
   background-repeat: no-repeat;
+  background-position: center;
   text-decoration: none;
   display: flex;
   flex-direction: column;
@@ -12,7 +13,7 @@
   z-index: 1;
 }
 
-.cover__overlay{
+.cover__overlay {
   width: 100%;
   height: 100%;
   background: #2A2C2F;
@@ -20,39 +21,31 @@
   position: absolute;
   transition: 0.4s linear;
 }
-.cover__link:hover .cover__overlay{
+
+.cover__link:hover .cover__overlay {
   opacity: 0.8;
 }
+
 @media screen and (max-width: 1024px) {
-  .cover__link{
+  .cover__link {
     min-height: 640px;
   }
-
 }
-
 
 @media screen and (max-width: 768px) {
-  .cover__link{
+  .cover__link {
     min-height: 480px;
   }
-
 }
+
 @media screen and (max-width: 665px) {
-  .cover__link{
+  .cover__link {
     min-height: 415px;
   }
-
-}
-@media screen and (max-width: 425px) {
-  .cover__link{
-    min-height: calc(0.625 * 425px);
-  }
-
 }
 
 @media screen and (max-width: 320px) {
-  .cover__link{
+  .cover__link {
     min-height: 200px;
   }
-
 }
