--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,10 +6,11 @@
   font-size: 24px;
   line-height: 28 px;
   text-decoration: none;
+  padding: 0;
 }
 
-.header__lang-link:first-child {
-  padding-right: 18px;
+.header__lang-link:last-child{
+
 }
 
 .header__lang-link:lang(en) {
