--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -15,9 +15,10 @@
   .lead__title {
     font-size: 68px;
     line-height: 1.1;
+    padding: 0 16px;
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 340px) {
   .lead__title {
     max-width: 288px;
     font-size: 40px;
